2008-02-xx  Ryousei Takano <takano-ryousei@aist.go.jp>

	*  Release version 2.2.1 (for developers only)

	* kernel/sch_psp.c: BUG FIX.  fix broken gap packet format.
	(reported by Denis Kaganovich <mahatma@bspu.unibel.by>)

	* kennel/sch_psp.c: Calculate gapsize only when packets are dequeued.
	Remove psp_class.gapsize.

	* kennel/sch_psp.c: Add debug mode.

2008-02-06  Ryousei Takano <takano-ryousei@aist.go.jp>

	*  Release version 2.2. (for developers only)

	* tc/q_psp.c: Add ifg option for configuring the inter frame gap size.
	
	* kernel/sch_psp.c: Review by netdev ML.  Especially thanks to
	Patrick McHardy <kaber@trash.net>.

	* kernel/sch_psp.c: BUG FIX.  make correct caclulation of the gap
	packet size.
	(reported by Sebastien Soudan <Sebastine.Soudan@ens-lyon.fr>)

	* kernel/sch_psp.c: Fix for kernel 2.6.22.
	(contributed by Denis Kaganovich <mahatma@bspu.unibel.by>)

	* kernel/sch_psp.c: BUG FIX.  remove unnecessary psp_classify()
	in the dequeue procedure.
	(reported by Denis Kaganovich <mahatma@bspu.unibel.by>)

	* kernel/sch_psp.c: BUG FIX.  Oops of division by zero in
	estimate_target_rate().
	(reported by Hisanobu Sakai <saki@bosai.go.jp>)

2007-11-21  Ryousei Takano <takano-ryousei@aist.go.jp>

	*  Release version 2.1.1.

	* kernel/sch_psp.c, tc/q_psp.c: BUG FIX.  rtnl_psp_set_defcls (libnl)
	has no effect.
	(contributed by Maury Maxime <maxime.maury@us.thalesgroup.com>)
	
2007-03-15  Ryousei Takano <takano-ryousei@aist.go.jp>

	*  Release version 2.1.

	* configure.in: NEW.

	* patch/libnl-1.0-pre6.psp.patch: NEW.  Add support for libnl.  
	It is a patch for libnl-1.0-pre6.  See configure --with-libnl-*.

	* kernel/sch_psp.c (psp_destroy_class): BUG FIX.  When a static mode 
	class is removed, the allocated_rate of the parent is not updated.
	(contributed by Sebastien Soudan <Sebastine.Soudan@ens-lyon.fr>)

	* kernel/sch_psp.c: Fix for kernel 2.6.20.
	(contributed by Denis Kaganovich <mahatma@bspu.unibel.by>)
