@@ -1,6 +1,6 @@
 PSPACER RELEASE NOTES
 =====================
-Version 2.2.1 (FOR DEVELOPERS ONLY)
+Version 2.2.1
 
 								2008-02-10
 
