@@ -1,4 +1,9 @@
-2008-02-xx  Ryousei Takano <takano-ryousei@aist.go.jp>
+2008-09-05  Ryousei Takano <takano-ryousei@aist.go.jp>
+
+	* kernel/sch_psp.c: Fix for kernel 2.6.26.
+	(contributed by Denis Kaganovich <mahatma@eu.by>)
+
+2008-02-10  Ryousei Takano <takano-ryousei@aist.go.jp>
 
 	*  Release version 2.2.1 (for developers only)
 
